--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,25 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+    "short_name": "Portfólio Mateus Evangelista",
+    "name": "Portfólio Mateus Evangelista",
+    "icons": [
+      
+      {
+        "src": "images/logo.png",
+        "type": "image/png",
+        "sizes": "172x172"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+    ],
+    "scope": ".",
+    "screenshots": [
+      {
+        "src": "/images/screenshot.png",
+        "type": "image/png",
+        "sizes": "1920x1080"
+      }
+    ],
+    "description": "Meus projetos feitos com Python e JavaScript.",
+    "start_url": ".",
+    "display": "standalone",
+    "theme_color": "#000000",
+    "background_color": "#ffffff"
 }
